@@ -69,13 +69,12 @@
     {% endfor %}
     {% block extrahead %}{% endblock %}
   </head>
-  {% set direction = config.theme.direction %}
   {% if palette.primary or palette.accent %}
     {% set primary = palette.primary | replace(" ", "-") | lower %}
     {% set accent  = palette.accent  | replace(" ", "-") | lower %}
-    <body dir="{{ direction }}" data-md-color-primary="{{ primary }}" data-md-color-accent="{{ accent }}">
+    <body dir="{{ lang.t('direction') }}" data-md-color-primary="{{ primary }}" data-md-color-accent="{{ accent }}">
   {% else %}
-    <body dir="{{ direction }}">
+    <body dir="{{ lang.t('direction') }}">
   {% endif %}
     <svg class="md-svg">
       <defs>
